# mouse-jiggler-rp2350

./: Cargo.toml  README.md  build.rs
.cargo/: config.toml
src/: jiggle.rs  main.rs
src/jiggle/: movement.rs  state.rs
