
[package]
edition = "2024"
name = "mouse-jiggler-rp2350"
version = "0.1.0"
license = "MIT or Apache-2.0"

[build-dependencies]
regex = "1.12.2"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
embedded-hal = "1.0.0"
defmt = "1"
defmt-rtt = "1"
heapless = "0.9.1"
usb-device = "0.3.2"
usbd-serial = "0.2.2"
embassy-executor = { version = "0.9.1", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
embassy-futures = "0.1.2"
embassy-rp = { version = "0.8.0", features = ["critical-section-impl", "rp235xa", "time-driver"] }
rp-pac = { version="7.0.0", features = ["rp235x"]}
embassy-usb = { version = "0.5.1", features = ["defmt"] }
embassy-time = "0.5.0"
usbd-hid = "0.8.2"
embassy-usb-driver = { version = "0.2.0", features = ["defmt"] }
embassy-time-driver = "0.2.1"
embassy-sync = "0.7.2"

[target.'cfg( target_arch = "arm" )'.dependencies]
panic-probe = { version = "1", features = ["print-defmt"] }

[target.'cfg( target_arch = "riscv32" )'.dependencies]
panic-halt = { version = "1.0.0" }

[target.riscv32imac-unknown-none-elf.dependencies]
rp235x-hal = { version = "0.3", features = ["rt", "critical-section-impl"] }

[target."thumbv8m.main-none-eabihf".dependencies]
rp235x-hal = { version = "0.3", features = ["rt", "critical-section-impl"] }
